student-portal/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-portal-frontend
  namespace: student-portal
  labels:
    app: student-portal-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-portal-frontend
  template:
    metadata:
      labels:
        app: student-portal-frontend
    spec:
      containers:
        - name: frontend
          image: arsenet10/student-portal-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
